<resources>
    <string name="app_name">AuthenticationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="icon_description">Icon de login para a aplicação</string>
    <string name="senha">Password</string>
    <string name="btnLogin">Sing in</string>
    <string name="txt_first_time">First time with us? <b>Sign Up</b></string>
    <string name="txt_sign_Up">Sign Up</string>
    <string name="titleSignUp">Join Us! :)</string>
    <string name="user_name">Name</string>
    <string name="phone">Number Phone</string>
    <string name="error_fill">Please fill in all fields.</string>
</resources>