<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".presentation.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/actor"
        android:text="@string/titleSignUp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/imgSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerNameSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/txtTitleSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmailSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/containerNameSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPasswordSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/containerEmailSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPhoneSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/containerPasswordSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_sign_Up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/containerPhoneSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>